# faimar

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: cache.py  config.py  history.py  main.py  valuation.py
app/providers/: nasdaq.py  yahoo.py
static/: app.js  index.html
tests/: test_cache.py  test_history.py  test_valuation.py
