[project]
name = "faimar"
version = "0.1.0"
description = "Fair market value explorer — estimated fair value vs share price for any ticker"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Caleb Piekstra" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "yfinance>=0.2.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
